--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo-tvsa.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sistema de Cotizaciones TVSA</title>
+  <link rel="icon" type="image/png" href="/logo-tvsa.png?v=2" />
+  <link rel="apple-touch-icon" href="/logo-tvsa.png?v=2" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="theme-color" content="#FF5900" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Cotizaciones Televisa Univision</title>
 
   <!-- TAILWIND CSS VIA CDN con Configuración -->
   <script src="https://cdn.tailwindcss.com"></script>
